--- a/public/rhodium-iv.com/index.html
+++ b/public/rhodium-iv.com/index.html
@@ -1,4 +1,3 @@
-<!-- hi von gh -->
 <!DOCTYPE html>
 <html lang="de">
 
@@ -169,6 +168,10 @@
     <!-- Custom JavaScript for this theme -->
     <script src="assets/js/scrolling-nav.js"></script>
 
+    <!-- test fuer github action -->
+    <script>
+        console.log("Hello Github Action.")
+    </script>
 </body>
 
 </html>
