--- a/public/rhodium-iv.com/index.html
+++ b/public/rhodium-iv.com/index.html
@@ -170,7 +170,7 @@
 
     <!-- test fuer github action -->
     <script>
-        console.log("Hello Github Action.")
+        console.log("Hello Github Action")
     </script>
 </body>
 
