changes to platin-bm.com

--- a/public/platin-vr.com/index.html
+++ b/public/platin-vr.com/index.html
@@ -24,7 +24,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bl-theme.css" rel="stylesheet">
+
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/c685a1ffad.js" crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
     <link href="assets/css/pall-style.css" rel="stylesheet">
@@ -42,9 +44,6 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
                 <ul class="navbar-nav navbar-right mt-n1">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#leistung">Leistungen</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#uns">Über uns</a>
                     </li>
@@ -85,64 +84,7 @@
         </div><!-- /.carousel -->
     </section><!-- /.section -->
 
-    <!-- Contents 35 -->
-    <section id="leistung" class="box pt-5 pb-5 bg-white">
-        <div class="container">
-            <div class="row pt-5">
-                <div class="col-xl-6 mx-auto text-center">
-                    <div class="section-title mb-5">
-                        <h4>Leistungen</h4>
-                    </div>
-                </div>
-            </div>
-            <div class="row pt-3 pb-5">
-                <div class="col-md-4 pb-5">
-                    <figure class="text-center">
-                        <img src="assets/images/blog-small1.jpg" alt="img1">
-                    </figure>
-                </div>
-
-                <div class="col-md-4">
-                    <figure class="text-center">
-                        <img src="assets/images/blog-small2.jpg" alt="img1">
-
-                    </figure>
-                </div>
-
-                <div class="col-md-4">
-                    <figure class="text-center">
-                        <img src="assets/images/blog-small3.jpg" alt="img1">
-
-                    </figure>
-                </div>
-
-                <div class="col-md-4 pb-5 pt-5">
-                    <figure class="text-center">
-                        <img src="assets/images/blog-small3.jpg" alt="img1">
-
-                    </figure>
-                </div>
-
-                <div class="col-md-4 pb-5 pt-5">
-                    <figure class="text-center">
-                        <img src="assets/images/blog-small2.jpg" alt="img1">
-
-                    </figure>
-                </div>
-
-                <div class="col-md-4 pb-5 pt-5">
-                    <figure class="text-center">
-                        <img src="assets/images/blog-small1.jpg" alt="img1">
-
-                    </figure>
-                </div>
-
-            </div> 
-            <!-- / .row -->
-        </div>
-        <!-- / .container -->
-    </section>
-    <!-- / .section -->
+    <div style="margin: 10em 0;" id="whitespace"></div>
 
     <section id="uns" class="fdb-block bg-primary pt-5 pb-5 ">
         <div class="row pt-5">
@@ -160,7 +102,7 @@
         <!-- Michael Bernhart -->
         <div style="margin-top: 5em;" class="container">
             <div class="row text-left align-items-center">
-                <div class="col-10 col-sm-6 m-auto m-lg-0 col-lg-4 pt-3 pb-3">
+                <div class="col-10 col-sm-6 col-lg-4">
                     <img alt="image" class="img-fluid" src="assets/images/Pall-bilder/Makler.jpg">
                 </div>
 
@@ -170,26 +112,21 @@
                         Was ist gemeint mit "Riskmanagement - Produkttech. Wirt." - wohin?
                      -->
                     <h5 class="pt-2 pb-3">
-                        19 Jahre Erfahrung im Versicherungsbereich - 
                         HTL für Wirtschafsingenieurwesen - 
                         Fachhochschule für Produkttechnologie und Wirtschaft - 
                         seit über 18 Jahren selbstständig
                     </h5>
 
                     <div class="row mt-5">
-                        <div class="col-12 col-sm-6">
-                            <dl>
-                                <dt>Was können Sie von mir erwarten:</dt>
-                                <dd>-) Verlässlichkeit, Ausdauer und Zielerreichung</dd>
-                                <dd>-) Klare Kommunikation</dd>
-                            </dl>
+                        <div style="text-align: center;" class="col-12 col-sm-6">
+                            <h6><b>Was können Sie von mir erwarten:</b></h6>
+                            <p>Verlässlichkeit, Ausdauer und Zielerreichung</p>
+                            <p>Klare Kommunikation</p>
                         </div>
 
-                        <div class="col-12 col-sm-6 pt-3 pt-sm-0">
-                            <dl>
-                                <dt>Warum mache ich das?</dt>
-                                <dd>-) Es gibt nichts besseres als Ihnen die Sicherheit für den Bestand und Betrieb Ihres Gebäudes zu geben.</dd>
-                            </dl>
+                        <div style="text-align: center;" class="col-12 col-sm-6 pt-3 pt-sm-0">
+                            <h6><b>Warum mache ich das?</b></h6>
+                            <p>Es gibt nichts besseres als Ihnen die Sicherheit für den Bestand und Betrieb Ihres Gebäudes zu geben.</p>
                         </div>
                     </div>
                 </div>
@@ -199,115 +136,47 @@
         <!-- Bernhard Wallner -->
         <div style="margin-top: 8em;" class="container">
             <div class="row text-left align-items-center">
-                <div class="col-10 col-sm-6 m-auto m-lg-0 col-lg-4 pt-3 pb-3">
-                    <img alt="image" class="img-fluid" src="">
-                </div>
-
-                <div class="col-12 col-lg-7 offset-lg-1 pt-4 pt-lg-0">
-                    <h2>Bernhard Wallner</h2>
+                <div class="col-12 col-lg-8  pt-4 pt-lg-0">
+                    <h2>Bernhard WALLNER</h2>
                     <h5 class="pt-2 pb-3">
                         Seit 1994 Unternehmer im Bereich Informationstechnologie, Riskmanagement, Produktion & Bau
                     </h5>
 
-                    <div class="row mt-5">
+                    <div style="text-align: center;" class="row mt-5">
                         <div class="col-12 col-sm-4">
-                            <p>Wissen kann Materie schaffen, Materie kann Leid schaffen, Leid kann Wissen schaffen!</p>
+                            <p>Wissen kann Materie schaffen,</p>
+                            <p>Materie kann Leid schaffen,</p>
+                            <p>Leid kann Wissen schaffen!</p>
                         </div>
                         <div class="col-12 col-sm-4">
-                            <p>Selbstachtung ist auch, sich mit Materie zu umgeben, die Bestand hat!</p>
+                            <p>Selbstachtung ist auch,</p>
+                            <p>sich mit Materie zu umgeben,</p>
+                            <p>die Bestand hat!</p>
                         </div>
                         <div class="col-12 col-sm-4">
-                            <p>Materie deren Betrieb sicher ist, führt zu Zufriedenheit aller und kann zum eigenen Glück führen!</p>
+                            <p>Materie deren Betrieb sicher ist,</p>
+                            <p>führt zu Zufriedenheit aller und kann zum eigenen Glück führen!</p>
                         </div>
                     </div>
+                </div>
+
+                <div style="position: relative;" class="col-10 col-sm-6 col-lg-4">
+                    <img style="margin: auto;" alt="image" class="img-fluid" src="assets/images/bernhard/B-W-ueberuns.png">
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Start Content bl -->
-    <section id="content-bl" class="content-block content-bl pt-3 pb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3 text-center">
-                    <div class="counter-icon">
-                        <span class="fa fa-id-card"></span>
-                    </div>
-                    <div class="counter-text">
-                        <h3 class="counter">403</h3>
-                        <span>Kunden</span>
-                    </div>
-                </div>
-
-                <div class="col-sm-3 text-center">
-                    <div class="counter-icon">
-                        <span class="fa fa-handshake-o"></span>
-                    </div>
-                    <div class="counter-text">
-                        <h3 class="counter">410</h3>
-                        <span>Aufträge</span>
-                    </div>
-                </div>
-
-                <div class="col-sm-3 text-center">
-                    <div class="counter-icon">
-                        <span class="fa fa-area-chart"></span>
-                    </div>
-                    <div class="counter-text">
-                        <h3 class="counter">44250</h3>
-                        <span>Wohnfläche m2</span>
-                    </div>
-                </div>
-
-                <div class="col-sm-3 text-center">
-                    <div class="counter-icon">
-                        <span class="fa fa-trophy"></span>
-                    </div>
-                    <div class="counter-text">
-                        <h3 class="counter">5</h3>
-                        <span>Neue Projekte</span>
-                    </div>
-                </div>
-            </div><!-- /.row -->
-        </div><!-- / .container -->
-    </section><!-- / .section -->
-
-
-    <!-- Contents 35 -->
-    <section id="blog" class="fdb-block bg-light pt-5 pb-5 ">
-        <div class="container">
-
-        </div>
-    </section>
-
-
-    <!-- section glück -->
-    <section>
-        <div class="rellax" data-rellax-speed="-1">
-            <div class="header text-light cover bg-fixed " style="background-image:url('assets/images/Pall-bilder/familie.gif')">
-                <div class="header-overlay-dark">
-                    <div class="container">
-                        <!-- /.row -->
-                        <div class="row  justify-content-center header-h50  align-items-center">
-                            <div class="col-sm-12 col-md-8 align-content-center   d-flex-row mt-3 mb-5  text-center">
-                                <h2><strong>Die größten Erfolge für uns sind zufriedene Kunden und bestmöglich realisierte Bauvorhaben.</strong></h2>
-                            </div><!-- /.col -->
-                        </div><!-- / .row -->
-                    </div><!-- / .container -->
-                </div><!-- / .overlay -->
-            </div><!-- / .header -->
-        </div><!-- / .rellax -->
-    </section><!-- / .section -->
+    <div style="margin: 10em 0;" id="whitespace"></div>
 
     <!-- section kontakt -->
     <section id="kontakt" class="pt-3 pb-5 bg-primary text-dark">
         <!-- Contact start -->
         <div class="container">
-            <div class="row">
+            <div class=" row">
                 <div class="col-md-12 heading text-center">
-                    <h1 class="">Schreiben Sie uns ein E-Mail
-                        <p class="lead">Ihre Fragen werden so schnell wie möglich beantwortet!</p>
-                    </h1>
+                    <h1>Schreiben Sie uns ein E-Mail</h1>
+                    <p class="lead">Ihre Fragen werden so schnell wie möglich beantwortet!</p>
                 </div>
             </div>
             <!--/ Title row end -->
@@ -345,7 +214,7 @@
                     </form>-->
                 </div>
                 <div class="col-md-5">
-                    <div class="contact-info">
+                    <div style="text-align: center;" class="contact-info">
                         <h3>Kontakt Details</h3>
                         <h6 class=" pb-2">Termin: nach Vereinbarung</h6>
                         <br>
@@ -402,6 +271,7 @@
                                             A-3400 Klosterneuburg
                                         </p>
                                         <p><i class="fa fa-envelope-o"></i> info@platin-vr.com</p>
+                                        <p>Firmenbuchnummer:<br>FN530380x</p>
 
                                         <h5>Ansprechpartner</h5>
                                         <p>Name:<br>
