added header pictures

--- a/public/platin-vr.com/index.html
+++ b/public/platin-vr.com/index.html
@@ -65,13 +65,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100 bb-img-3" src="assets/images/slider/Sunrise.jpg">
+                    <img class="d-block w-100 bb-img-3" src="assets/images/headers/HHH10.jpg">
                 </div>
                 <div class="carousel-item ">
-                    <img class="d-block w-100 bb-img-3" src="assets/images//slider/Ebelsberg%202021.gif">
+                    <img class="d-block w-100 bb-img-3" src="assets/images/headers/HHH12.jpg">
                 </div>
                 <div class="carousel-item ">
-                    <img class="d-block w-100 bb-img-3" src="assets/images/slider/rosen.png">
+                    <img class="d-block w-100 bb-img-3" src="assets/images/headers/C5D_1420_e.jpg"
                 </div>
             </div>
             <div class="main-text hidden-xs hidden-sm">
@@ -142,20 +142,45 @@
                         Seit 1994 Unternehmer im Bereich Informationstechnologie, Riskmanagement, Produktion & Bau
                     </h5>
 
-                    <div style="text-align: center;" class="row mt-5">
+                    <div class="row mt-5">
                         <div class="col-12 col-sm-4">
-                            <p>Wissen kann Materie schaffen,</p>
-                            <p>Materie kann Leid schaffen,</p>
-                            <p>Leid kann Wissen schaffen!</p>
+                            <div class="container">
+                                <div class="row">
+                                    <p>Wissen kann Materie schaffen,</p>
+                                </div>
+                                <div class="row">
+                                    <p>Materie kann Leid schaffen,</p>
+                                </div>
+                                <div class="row">
+                                    <p>Leid kann Wissen schaffen!</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-12 col-sm-4">
-                            <p>Selbstachtung ist auch,</p>
-                            <p>sich mit Materie zu umgeben,</p>
-                            <p>die Bestand hat!</p>
+                            <div class="container">
+                                <div class="row">
+                                    <p>Selbstachtung ist auch,</p>
+                                </div>
+                                <div class="row">
+                                    <p>sich mit Materie zu umgeben,</p>
+                                </div>
+                                <div class="row">
+                                    <p>die Bestand hat!</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-12 col-sm-4">
-                            <p>Materie deren Betrieb sicher ist,</p>
-                            <p>führt zu Zufriedenheit aller und kann zum eigenen Glück führen!</p>
+                            <div class="container">
+                                <div class="row">
+                                    <p>Materie deren Betrieb sicher ist,</p>
+                                </div>
+                                <div class="row">
+                                    <p>führt zu Zufriedenheit aller und</p> 
+                                </div>
+                                <div class="row">
+                                    <p>zum eigenen Glück führen!</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
