--- a/public/platin-vr.com/index.html
+++ b/public/platin-vr.com/index.html
@@ -71,7 +71,7 @@
                     <img class="d-block w-100 bb-img-3" src="assets/images/headers/HHH12.jpg">
                 </div>
                 <div class="carousel-item ">
-                    <img class="d-block w-100 bb-img-3" src="assets/images/headers/C5D_1420_e.jpg"
+                    <img class="d-block w-100 bb-img-3" src="assets/images/headers/C5D_1420_e.jpg">
                 </div>
             </div>
             <div class="main-text hidden-xs hidden-sm">
@@ -247,7 +247,7 @@
                             Platin BM GmbH<br>
                             Leopoldsgraben 27c<br>
                             A-3400 Klosterneuburg<br>
-                            T: 06641565758
+                            T: +43(0)6641565758
                         </h6>
                         <h6 class=" pb-2"><i class="fa fa-envelope-o"></i> <a href="mailto: michael@bernhart.at">info@platin-bm.com</a></h6>
                         <h6 class=" pb-2"><i class="fa fa-globe"></i> www.platin-bm.com</h6>
