changes leo whatsapp

--- a/public/platin-vr.com/index.html
+++ b/public/platin-vr.com/index.html
@@ -88,13 +88,14 @@
 
     <section id="uns" class="fdb-block bg-primary pt-5 pb-5 ">
         <div class="row pt-5">
-            <div class="col-xl-6 mx-auto text-center">
+            <div class="col-xl-7 mx-auto text-center">
                 <div class="section-title mb-5">
                     <h4>Über uns</h4>
                 </div>
                 <h5 style="padding-bottom: 40px;">
-                    Wahre Freundschaft ist eine sehr langsam wachsende Pflanze – Georg Washington 
-                    Seit 18 Jahren gehen wir gemeinsam einen Weg und wir werden ihn weitergehen.
+                    Wahre Freundschaft ist eine sehr langsam wachsende Pflanze<br>
+                    – Georg Washington<br><br>
+                    Seit 18 Jahren gehen wir gemeinsam einen Weg und wir werden ihn weiter gehen.
                 </h5>
             </div>
         </div>
@@ -126,7 +127,7 @@
 
                         <div style="text-align: center;" class="col-12 col-sm-6 pt-3 pt-sm-0">
                             <h6><b>Warum mache ich das?</b></h6>
-                            <p>Es gibt nichts besseres als Ihnen die Sicherheit für den Bestand und Betrieb Ihres Gebäudes zu geben.</p>
+                            <p>Es gibt nichts Besseres als Ihnen die Sicherheit für den Bestand und Betrieb Ihres Gebäudes zu geben.</p>
                         </div>
                     </div>
                 </div>
@@ -136,7 +137,7 @@
         <!-- Bernhard Wallner -->
         <div style="margin-top: 8em;" class="container">
             <div class="row text-left align-items-center">
-                <div class="col-12 col-lg-8  pt-4 pt-lg-0">
+                <div class="col-12 col-md-9  pt-4 pt-lg-0">
                     <h2>Bernhard WALLNER</h2>
                     <h5 class="pt-2 pb-3">
                         Seit 1994 Unternehmer im Bereich Informationstechnologie, Riskmanagement, Produktion & Bau
@@ -190,12 +191,12 @@
                                 </div>
                                 <div class="row">
                                     <div class="bernhard_text">
-                                        <p>führt zu Zufriedenheit aller und</p> 
+                                        <p>führt zu Zufriedenheit Aller und</p> 
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="bernhard_text">
-                                        <p>zum eigenen Glück führen!</p>
+                                        <p>zum eigenen Glück!</p>
                                     </div>
                                 </div>
                             </div>
@@ -203,7 +204,7 @@
                     </div>
                 </div>
 
-                <div class="col-10 col-sm-6 col-lg-4">
+                <div class="col-10 col-sm-6 col-md-3">
                     <img style="margin: auto;" alt="image" class="img-fluid" src="assets/images/bernhard/B-W-ueberuns.png">
                 </div>
             </div>
@@ -260,7 +261,7 @@
 
             <div class="row mt-4">
                 <div class="col text-center">
-                    <p class="m-0 text-center text-dark">© 2021 Platin | <a href="#myModal" data-toggle="modal">Impressum</a>
+                    <p class="m-0 text-center text-dark">© 2022 Platin | <a href="#myModal" data-toggle="modal">Impressum</a>
                 </div>
             </div><!-- / .row -->
             <!-- Modal -->
