changes Leo Whatsapp 14/02/22

--- a/public/platin-bm.com/index.html
+++ b/public/platin-bm.com/index.html
@@ -30,6 +30,9 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/pall-style.css" rel="stylesheet">
 
+    <!-- custom css for images -->
+    <link rel="stylesheet" href="assets/css/image.css">
+
 </head>
 
 <body id="page-top">
@@ -139,7 +142,8 @@
                 <div class="col-12 col-md-9  pt-4 pt-lg-0">
                     <h2>Bernhard WALLNER</h2>
                     <h5 class="pt-2 pb-3">
-                        Seit 1994 Unternehmer im Bereich Informationstechnologie, Riskmanagement, Produktion & Bau
+                        Seit 1994 Unternehmer im Bereich<br>
+                        Informationstechnologie, Riskmanagement, Produktion & Bau
                     </h5>
 
                     <div class="row mt-5">
@@ -204,7 +208,7 @@
                 </div>
 
                 <div class="col-10 col-sm-6 col-md-3">
-                    <img style="margin: auto;" alt="image" class="img-fluid" src="assets/images/bernhard/B-W-ueberuns.png">
+                    <img style="margin: auto;" alt="image" class="img-fluid" id="bernhard_img" src="assets/images/bernhard/B-W-ueberuns.png">
                 </div>
             </div>
         </div>
