platin absatz aenderung

--- a/public/platin-bm.com/index.html
+++ b/public/platin-bm.com/index.html
@@ -79,7 +79,7 @@
             <div class="main-text hidden-xs hidden-sm">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-7 text-center">
-                        <h1 class="text-shadow">Wir schaffen Sicherheit für den Bestand und Betrieb Ihres Gebäudes.</h1>
+                        <h1 class="text-shadow" style="text-shadow: 2px 2px #000000">Wir schaffen Sicherheit für den Bestand und Betrieb Ihres Gebäudes.</h1>
                     </div>
                 </div>
             </div>
@@ -147,59 +147,33 @@
                     </h5>
 
                     <div class="row mt-5">
-                        <div style="padding-top: 2em;" class="col-12 col-sm-4">
-                            <div class="container">
-                                <div class="row">
+                        <div class="container" style="padding-top: 2em;">
+                            <div class="row">
+                                <div class="col-sm-4">
                                     <div class="bernhard_text">
-                                        <p>Wissen kann Materie schaffen,</p>
+                                        <p>
+                                            Wissen kann Materie schaffen,<br>
+                                            Materie kann Leid schaffen,<br>
+                                            Leid kann Wissen schaffen!
+                                        </p>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="col-sm-4">
                                     <div class="bernhard_text">
-                                        <p>Materie kann Leid schaffen,</p>
+                                        <p>
+                                            Selbstachtung ist auch,<br>
+                                            sich mit Materie zu umgeben,<br>
+                                            die Bestand hat!
+                                        </p>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="col-sm-4">
                                     <div class="bernhard_text">
-                                        <p>Leid kann Wissen schaffen!</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div style="padding-top: 2em;" class="col-12 col-sm-4">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="bernhard_text">
-                                        <p>Selbstachtung ist auch,</p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="bernhard_text">
-                                        <p>sich mit Materie zu umgeben,</p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="bernhard_text">
-                                        <p>die Bestand hat!</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div style="padding-top: 2em;" class="col-12 col-sm-4">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="bernhard_text">
-                                        <p>Materie deren Betrieb sicher ist,</p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="bernhard_text">
-                                        <p>führt zu Zufriedenheit Aller und</p> 
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="bernhard_text">
-                                        <p>zum eigenen Glück!</p>
+                                        <p>
+                                            Materie deren Betrieb sicher ist,<br>
+                                            führt zu Zufriedenheit Aller und<br>
+                                            zum eigenen Glück!
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -240,7 +214,7 @@
                             Platin BM GmbH<br>
                             Leopoldsgraben 27c<br>
                             A-3400 Klosterneuburg<br>
-                            T: +43 6641565758
+                            T: +43 664 15 65 758
                         </h6>
                         <h6 class=" pb-2"><i class="fa fa-envelope-o"></i> <a href="mailto: michael@bernhart.at">info@platin-bm.com</a></h6>
                         <h6 class=" pb-2"><i class="fa fa-globe"></i> www.platin-bm.com</h6>
@@ -286,7 +260,7 @@
                                             Leopoldsgraben 27c<br>
                                             A-3400 Klosterneuburg
                                         </p>
-                                        <p><i class="fa fa-envelope-o"></i> info@platin-vr.com</p>
+                                        <p><i class="fa fa-envelope-o"></i> info@platin-bm.com</p>
                                         <p>Firmenbuchnummer:<br>FN530380x</p>
 
                                         <h5>Ansprechpartner</h5>
@@ -297,7 +271,7 @@
                                             Geschäftsführer
                                         </p>
                                         <p>Mail:<br>
-                                            info@platin-vr.com</p>
+                                            info@platin-bm.com</p>
 
                                         <h5>Informationspflicht:</h5>
                                         <p>
