biosbau changed links in footer

--- a/public/biosbau.com_20220102/index.html
+++ b/public/biosbau.com_20220102/index.html
@@ -1887,10 +1887,10 @@
             <div class="row text-center align-items-center ">
                 <div class="col mt-4 mt-lg-0 text-center">
                     <a class="btn btn-default" href="http://www.bioslehm.com" role="button"><span class="font-weight-bold">BiosLehm</span></a>
-                    <a class="btn btn-default" href="http://www.bioshof.com"  role="button"><span class="font-weight-bold">BiosHof</span></a>
+                    <!-- <a class="btn btn-default" href="http://www.bioshof.com"  role="button"><span class="font-weight-bold">BiosHof</span></a> -->
                     <a class="btn btn-default" href="http://www.palladiumbau.com" role="button"><span class="font-weight-bold">Palladium</span></a>
-                    <a class="btn btn-default" href="http://www.rhodium.com"  role="button"><span class="font-weight-bold">Rhodium</span></a>
-                    <a class="btn btn-default" href="http://www.platin.com"  role="button"><span class="font-weight-bold">Platin</span></a>
+                    <a class="btn btn-default" href="http://www.rhodium-iv.com"  role="button"><span class="font-weight-bold">Rhodium</span></a>
+                    <a class="btn btn-default" href="http://www.platin-bm.com"  role="button"><span class="font-weight-bold">Platin</span></a>
                 </div>
             </div><!-- / .row -->
 
