--- a/public/platin-bm.com/index.html
+++ b/public/platin-bm.com/index.html
@@ -67,13 +67,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
+                    <img class="d-block w-100 bb-img-3" src="assets/images/headers/C5D_1420_e.jpg">
+                </div>
+                <div class="carousel-item">
                     <img class="d-block w-100 bb-img-3" src="assets/images/headers/HHH10.jpg">
                 </div>
                 <div class="carousel-item ">
                     <img class="d-block w-100 bb-img-3" src="assets/images/headers/HHH12.jpg">
-                </div>
-                <div class="carousel-item ">
-                    <img class="d-block w-100 bb-img-3" src="assets/images/headers/C5D_1420_e.jpg">
                 </div>
             </div>
             <div class="main-text hidden-xs hidden-sm">
@@ -161,18 +161,18 @@
                                 <div class="col-sm-4">
                                     <div class="bernhard_text">
                                         <p>
-                                            Selbstachtung ist auch,<br>
+                                            Selbsterhaltung bedeutet auch<br>
                                             sich mit Materie zu umgeben,<br>
-                                            die Bestand hat!
+                                            deren Bestand Sie sichern!
                                         </p>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="bernhard_text">
                                         <p>
-                                            Materie deren Betrieb sicher ist,<br>
-                                            führt zu Zufriedenheit Aller und<br>
-                                            zum eigenen Glück!
+                                            Materie auch zum Vorteil Anderer,<br>
+                                            führt zur Zufriedenheit aller und<br>
+                                            kann zum eigenen Glück führen!
                                         </p>
                                     </div>
                                 </div>
