bioslehm changed links in footer

--- a/public/bioslehm.com_20210706/index.html
+++ b/public/bioslehm.com_20210706/index.html
@@ -232,10 +232,9 @@
                     </h5>
                     <div class="row pt-3">
                         <div class="col-sm-6 col-md-6 text-center"><a href="http://www.biosbau.com/"><img class="img-fluid " src="assets/images/BB-bilder/BiosBau_Logo.gif" alt="BiosBau" style="height:70px;"><br><h5 class="bb-textb">Baubetrieb</h5></a></div>
-                        <div class="col-sm-6 col-md-6 text-center"><a href="#"><img class="img-fluid" src="assets/images/BB-bilder/BiosBB_Logo.gif" alt="image" style="height:70px;"><h5 class="bb-textb">Produzent</h5></a></div>
                         <div class="col-sm-6 col-md-4 text-center"><a href="http://www.palladiumbau.com/"><img class="img-fluid" src="assets/images/BB-bilder/Palladium_Logo.gif" alt="image" style="height:70px;"><h5 class="bb-textb">Bauträger</h5></a></div>
-                        <div class="col-sm-6 col-md-4 text-center"><a href="#"><img class="img-fluid" src="assets/images/BB-bilder/Platin_Logo.gif" alt="image" style="height:70px;"><h5 class="bb-textb">Versicherungsmakler</h5></a></div>
-                        <div class="col-sm-6 col-md-4 text-center"><a href="#"><img class="img-fluid" src="assets/images/BB-bilder/Rhodium_Logo.gif" alt="image" style="height:70px;"><h5 class="bb-textb">Investment</h5></a></div>
+                        <div class="col-sm-6 col-md-4 text-center"><a href="http://www.platin-bm.com"><img class="img-fluid" src="assets/images/BB-bilder/Platin_Logo.gif" alt="image" style="height:70px;"><h5 class="bb-textb">Versicherungsmakler</h5></a></div>
+                        <div class="col-sm-6 col-md-4 text-center"><a href="http://www.rhodium-iv.com"><img class="img-fluid" src="assets/images/BB-bilder/Rhodium_Logo.gif" alt="image" style="height:70px;"><h5 class="bb-textb">Investment</h5></a></div>
                     </div>
                 </div>
             </div><!-- / .row -->
