bernhard text added date

--- a/public/platin-bm.com/index.html
+++ b/public/platin-bm.com/index.html
@@ -141,13 +141,13 @@
             <div class="row text-left align-items-center">
                 <div class="col-12 col-md-9  pt-4 pt-lg-0">
                     <h2>Bernhard WALLNER</h2>
-                    <h5 class="pt-2 pb-3">
+                    <h5 class="pt-2">
                         Seit 1994 Unternehmer im Bereich<br>
                         Informationstechnologie, Riskmanagement, Produktion & Bau
                     </h5>
 
                     <div class="row mt-5">
-                        <div class="container" style="padding-top: 2em;">
+                        <div class="container" style="padding-top: -4em;">
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="bernhard_text">
@@ -175,6 +175,11 @@
                                             kann zum eigenen Glück führen!
                                         </p>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div style="text-align: right; margin-top: -0.5rem;" class="col-sm-12">
+                                    <p>(Bernhard Wallner, März 2022)</p>
                                 </div>
                             </div>
                         </div>
