--- a/public/biosbau.com/index.html
+++ b/public/biosbau.com/index.html
@@ -1907,7 +1907,7 @@
                                             +43 (0) 664 7347 5580
                                         </p>
                                         <p>Mail:<br>
-                                            c.wallner@biosbau.com
+                                            l.wallner@biosbau.com
                                          </p>
                                         <h5>Informationspflicht:</h5>
                                         <p>
