Impressum: Mail changed from c.wallner to l.wallner

--- a/public/biosbau.com_20220102/index.html
+++ b/public/biosbau.com_20220102/index.html
@@ -1934,7 +1934,7 @@
                                             +43 (0) 664 7347 5580
                                         </p>
                                         <p>Mail:<br>
-                                            c.wallner@biosbau.com
+                                            l.wallner@biosbau.com
                                          </p>
                                         <h5>Informationspflicht:</h5>
                                         <p>
